--- a/style.css
+++ b/style.css
@@ -88,6 +88,10 @@ a:hover {
     margin:0;
 }
 
+.socialButtons {
+    margin-top:12px;
+}
+
 .imageLabels {
     font-size:0.67em;
     color:#333;
